se agregaron los thunder de todas las rutas
